# docs/generated/api/swagger.json
@@ -5155,7 +5155,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/services.TwoFactorSetup"
+                            "$ref": "#/definitions/application.TwoFactorSetup"
                         }
                     },
                     "400": {
@@ -5555,6 +5555,17 @@
         }
     },
     "definitions": {
+        "application.TwoFactorSetup": {
+            "type": "object",
+            "properties": {
+                "otpauth_uri": {
+                    "type": "string"
+                },
+                "secret": {
+                    "type": "string"
+                }
+            }
+        },
         "contract.AgentPerformanceStats": {
             "type": "object",
             "properties": {
@@ -7963,17 +7974,6 @@
                     "type": "integer"
                 },
                 "date": {
-                    "type": "string"
-                }
-            }
-        },
-        "services.TwoFactorSetup": {
-            "type": "object",
-            "properties": {
-                "otpauth_uri": {
-                    "type": "string"
-                },
-                "secret": {
                     "type": "string"
                 }
             }
